--- a/css/reset_less.css
+++ b/css/reset_less.css
@@ -282,6 +282,9 @@ a:hover {
 }
 .cb {
   clear: both;
+  height: 0;
+  overflow: hidden;
+  zoom: 1;
 }
 .sanjiao {
   border-radius: 5px;
@@ -293,4 +296,84 @@ a:hover {
   width: 0;
   height: 0;
   overflow: hidden;
+}
+.ys .top_x {
+  height: 441px ;
+  background: url(../img/zi_ben_02.jpg) no-repeat center center;
+}
+.ys .line {
+  height: 58px;
+  width: 100%;
+  background: #06032a;
+}
+.ys .line .alltext {
+  width: 960px;
+  height: 100%;
+  margin: auto;
+  padding-left: 30px;
+}
+.ys .line .alltext span {
+  color: #f6ce6e;
+  font-size: 20px;
+  margin-right: 47px;
+  line-height: 58px;
+  text-align: center;
+}
+.ys .line .alltext .active {
+  color: white;
+}
+.about {
+  width: 960px;
+  margin: auto;
+  margin-top: 65px;
+}
+.about .left_l {
+  width: 448px;
+  height: 250px;
+  float: left;
+  margin-right: 8px;
+}
+.about p {
+  text-indent: 4em;
+  font-size: 16px;
+  line-height: 32px;
+  color: #666;
+}
+.about p a {
+  color: #2519b7;
+  text-decoration: underline;
+}
+.about .right_r {
+  width: 500px;
+  height: 250px;
+  float: left;
+}
+.about .right_r .l {
+  width: 122px;
+  height: 100%;
+  float: left;
+  margin-top: -2px;
+}
+.about .right_r .l .imgs {
+  width: 122px;
+  height: 79.36507937px;
+  border: 2px solid #fff;
+  margin-bottom: 1px;
+  cursor: pointer;
+}
+.about .right_r .l .imgs img {
+  width: 100%;
+  height: 100%;
+}
+.about .right_r .l .active {
+  border: 2px solid #ffb400;
+}
+.about .right_r .r {
+  float: right;
+  height: 248px;
+  width: 373px;
+}
+.about .right_r .r img {
+  width: 100%;
+  height: 100%;
 }
