--- a/css/reset_less.less
+++ b/css/reset_less.less
@@ -130,3 +130,40 @@ a:hover{color:#e62223;text-decoration:underline}
      .border_radius(100);
 }
 
+.ys{
+    .top_x{ height:441px ;
+    background: url(../img/zi_ben_02.jpg) no-repeat center center;
+    }
+    .line{height:58px;width: 100%;background: #06032a;
+        .alltext{
+            width: 960px;height: 100%;margin: auto;padding-left: 30px;
+            span{color: #f6ce6e;font-size:20px;margin-right: 47px;line-height: 58px;text-align: center;}
+            .active{color: white;}
+        }
+    }
+
+}
+.about{width: 960px;margin: auto;margin-top:65px;
+    .left_l{width: 448px;height: 250px;float: left;margin-right: 8px;}
+    p{text-indent: 4em;font-size:16px;line-height:32px;color: #666;
+    a{color: #2519b7;text-decoration: underline;}
+    }
+    @w:250px;
+    .right_r{
+       
+        width: 500px;height: 250px;float: left;
+        .l{width: 122px;height: 100%;float: left; margin-top: -2px;
+            .imgs{width: 122px;height:@w/3.15; border: 2px solid #fff;margin-bottom:1px;
+            cursor: pointer;
+            img{width: 100%;height: 100%;}
+            }
+            .active{border: 2px solid #ffb400}
+        }
+        .r{
+            float: right;height:248px;width: 373px;
+            img{width: 100%;height: 100%;}
+        }
+    }
+}
+
+
