--- a/css/reset_less.less
+++ b/css/reset_less.less
@@ -118,7 +118,13 @@ a:hover{color:#e62223;text-decoration:underline}
   -moz-box-shadow: @arguments;
   -webkit-box-shadow: @arguments;
 }
-
+//iE6 滤镜  iE6 png24
+.bgie(@url:""){
+    @url2:@url;
+     background:url(@url2) no-repeat !important; 
+     background:none;
+     filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src=@url);
+}
 
 
 
@@ -137,13 +143,13 @@ a:hover{color:#e62223;text-decoration:underline}
     .line{height:58px;width: 100%;background: #06032a;
         .alltext{
             width: 960px;height: 100%;margin: auto;padding-left: 30px;
-            span{color: #f6ce6e;font-size:20px;margin-right: 47px;line-height: 58px;text-align: center;}
+            span{color: #f6ce6e;font-size:20px;margin-right: 47px;line-height: 58px;text-align: center;display: inline;}
             .active{color: white;}
         }
     }
 
 }
-.about{width: 960px;margin: auto;margin-top:65px;
+.about{width: 960px;margin: auto;margin-top:65px;height: 308px;
     .left_l{width: 448px;height: 250px;float: left;margin-right: 8px;}
     p{text-indent: 4em;font-size:16px;line-height:32px;color: #666;
     a{color: #2519b7;text-decoration: underline;}
@@ -165,5 +171,37 @@ a:hover{color:#e62223;text-decoration:underline}
         }
     }
 }
+.geli{height:15px;width: 100%;background: #eeeeee;}
 
-
+.alltitl{
+    width: 960px; margin: auto;
+    .line_l{height: 80px;width:400px;border-bottom: 2px solid #ccc;float: left;}
+    .txt{height:30px;width: 160px; font-size: 30px;font-weight: bold;color: #33399a;float: left;text-align: center;margin-top: 64px;}
+    .line_r{height: 80px;width:400px;border-bottom: 2px solid #ccc;float: right;}
+}
+.allpp{
+    .line{height:58px;width: 100%;
+        .alltext{
+            width: 940px;height:35px;margin: 0 auto;padding-left: 20px; border-bottom: 1px solid #ccc;
+            span{color: #666;font-size:20px;margin-right: 47px;text-align: center;display:inline-block;height:35px;line-height:35px;}
+            .active{color: white;height:35px;background: #f6ce6e;padding: 0 10px;.border_radius(5px)}
+        }
+    }
+    @ulw:960px;
+    ul{ width: @ulw;height:188px;margin: 0 auto;
+        li{;width: @ulw/4;font-size: 0;display: block;float: left;
+        img{margin: 0 auto;width:190px;margin-left: 25px;height: 120px;}
+        }
+        div{height: 68px;width:100%;font-size: 16px;line-height: 68px;text-align: center;color: #666;}
+    }
+}
+.blue_bg{
+    background: url(../img/blue_bg.jpg) no-repeat center center;height:792px;
+    .canjia{
+        width:380px; height:68px;margin: auto;
+       
+        .bgie(~"img/canjia.png");
+       
+        
+    }
+}
