--- a/css/reset_less.css
+++ b/css/reset_less.css
@@ -323,6 +323,9 @@ a:hover {
 .ys .line .alltext .active {
   color: white;
 }
+.ys .line .alltext a:hover {
+  text-decoration: none;
+}
 .about {
   width: 960px;
   margin: auto;
@@ -344,6 +347,12 @@ a:hover {
 .about p a {
   color: #2519b7;
   text-decoration: underline;
+}
+.about p a:hover {
+  text-decoration: underline;
+}
+.about a:hover {
+  text-decoration: none;
 }
 .about .right_r {
   width: 500px;
@@ -468,11 +477,172 @@ a:hover {
   background: url(../img/blue_bg.jpg) no-repeat center center;
   height: 792px;
 }
+.blue_bg .hig {
+  height: 51px;
+  width: 100%;
+}
 .blue_bg .canjia {
+  cursor: pointer;
   width: 380px;
   height: 68px;
   margin: auto;
-  background: url(img/canjia.png) no-repeat !important;
+  background: url('../img/canjia.png') no-repeat !important;
   background: none;
   filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src=img/canjia.png);
+}
+.blue_bg .center_fix {
+  height: 200px;
+  width: 200px;
+  margin: auto;
+  position: relative;
+}
+.blue_bg .center_fix .wujiao {
+  cursor: pointer;
+  position: absolute;
+  width: 188px;
+  height: 162px;
+  text-align: center;
+  font-size: 32px;
+  line-height: 162px;
+  color: white;
+  display: none;
+  color: #434ef0;
+  background: url('../img/wujiaoxing.png') no-repeat !important;
+  background: none;
+  filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src=img/wujiaoxing.png);
+}
+.blue_bg .center_fix .wujiao_shiti {
+  background: url('../img/wujiaoxin_shiti.png') no-repeat !important;
+  background: none;
+  filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src=img/wujiaoxin_shiti.png);
+  color: white;
+}
+.blue_bg .center_fix .p1 {
+  top: 220px;
+  left: 18px;
+  display: block;
+}
+.blue_bg .center_fix .p2 {
+  top: 48px;
+  left: 18px;
+  display: block;
+}
+.blue_bg .center_fix .p3 {
+  top: 392px;
+  left: 18px;
+  display: block;
+}
+.blue_bg .center_fix .p4 {
+  top: 138px;
+  left: -134px;
+  display: block;
+}
+.blue_bg .center_fix .p5 {
+  top: 310px;
+  left: -134px;
+  display: block;
+}
+.blue_bg .center_fix .p6 {
+  top: 138px;
+  left: 170px;
+  display: block;
+}
+.blue_bg .center_fix .p7 {
+  top: 310px;
+  left: 170px;
+  display: block;
+}
+.blue_bg .center_fix .p8 {
+  top: 220px;
+  left: 322px;
+  display: block;
+}
+.blue_bg .center_fix .p9 {
+  top: 220px;
+  left: -286px;
+  display: block;
+}
+.bg_all {
+  width: 100%;
+  height: 284px;
+  background: #eeeeee;
+}
+.bg_all .mid_bottom {
+  font-family: 宋体;
+  height: 284px;
+  width: 960px;
+  background: #eeeeee;
+  margin: auto;
+}
+.bg_all .mid_bottom .guangao_l {
+  width: 300px;
+  font-size: 16px;
+  line-height: 25px;
+  float: left;
+  margin-top: 50px;
+  margin-left: 180px;
+  _margin-left: 100px;
+}
+.bg_all .mid_bottom .guangao_l .title {
+  font-size: 20px;
+  font-weight: bold;
+  line-height: 31px;
+}
+.bg_all .mid_bottom .guangao_r {
+  width: 300px;
+  font-size: 16px;
+  line-height: 25px;
+  float: right;
+  margin-top: 50px;
+  margin-left: 180px;
+  _margin-left: 100px;
+}
+.bg_all .mid_bottom .guangao_r .title {
+  font-size: 20px;
+  font-weight: bold;
+  line-height: 31px;
+}
+.meiti {
+  position: relative;
+}
+.meiti .txt {
+  margin-left: 396px;
+  position: absolute;
+  top: 10px;
+}
+.meiti img {
+  margin-top: 90px;
+}
+.foot_boottom {
+  height: 100px;
+  background: #151b73;
+  width: 100%;
+}
+.foot_boottom .bottom_right {
+  width: 960px;
+  margin: 0 auto;
+  padding-top: 10px;
+  height: 100px;
+  background: #151b73;
+}
+.foot_boottom .bottom_right #foot {
+  text-align: center;
+  width: 960px;
+  margin: 0px auto;
+  padding-bottom: 20px;
+  font-size: 12px;
+  color: #fff;
+  margin-top: 33px;
+}
+.foot_boottom .bottom_right #foot div {
+  margin-bottom: 10px;
+}
+.foot_boottom .bottom_right #foot a {
+  color: #fff;
+  text-decoration: underline;
+  margin: 5px;
+}
+.foot_boottom .bottom_right #foot a:hover {
+  color: red;
+  text-decoration: none;
 }
